--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -44,6 +44,6 @@ summaryLength = 10
 
 [params]
   # Demo setting for displaying the siteparam shortcode the docs.
-  siteparam.test.text = "A **nested** option <b>with</b> formatting"
+  #siteparam.test.text = "A **nested** option <b>with</b> formatting"
   # Extension to the image effects only for the docs.
-  imageEffects.bg-white = true
+  #imageEffects.bg-white = true
